# fmd

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build.yml  doc.yml  publish.yml  test.yml
docs/: getting-started.md  index.md
docs/en/: getting-started.md  index.md
docs/en/reference/: etf.md  index-data-types.md  index.md  overview.md  stock.md
docs/reference/: overview.md  stock-data-types.md
docs/zh-TW/: getting-started.md  index.md
docs/zh-TW/reference/: etf-data-types.md  overview.md
fmd/: __init__.py  backend.py  base.py  client.py  decorators.py  exceptions.py
fmd/objs/: __init__.py  etf.py  stock.py
fmd/resources/: __init__.py
fmd/resources/etf/: obj.py  types.py
fmd/resources/index/: obj.py  types.py
fmd/resources/stock/: obj.py  types.py
fmd/types/: __init__.py  etf.py
tests/: conftest.py  test_backend.py  test_base.py  test_client.py
tests/objs/: test_etf.py  test_stock.py
tests/resources/etf/: test_obj_etf.py
tests/resources/index/: test_obj_index.py
tests/resources/stock/: test_obj_stock.py
