[tool.poetry]
name = "fmd"
version = "0.2.0"
description = "Download Taiwan financial market data via FMD API."
authors = ["Yu Chen, Yang <ycy.tai@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/ycytai/fmd"
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pre-commit = "^3.7.1"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.32"
mkdocstrings = {extras = ["python"], version = "^0.25.2"}
pygments = "^2.18.0"


[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
